--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -2,16 +2,21 @@ name: NASA Project CI
 on:
   push:
     branches: [main]
-  pull_request: 
+  pull_request:
     branches: [main]
-jobs: 
+jobs:
   build:
+    env:
+      CI: true
+      strategy:
+        matrix:
+          node-version: [14.x, 16.x, 18.x]
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js version 18
+      - name: Use Node.js version ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm run build --prefix client
